--- a/tests/sdk/bus_center/fuzztest/setnodedatachangeflag_fuzzer/BUILD.gn
+++ b/tests/sdk/bus_center/fuzztest/setnodedatachangeflag_fuzzer/BUILD.gn
@@ -21,13 +21,12 @@ ohos_fuzztest("SetNodeDataChangeFlagFuzzTest") {
   module_out_path = module_output_path
   fuzz_config_file = "//foundation/communication/dsoftbus/tests/sdk/bus_center/fuzztest/setnodedatachangeflag_fuzzer"
   include_dirs = [
+    "$dsoftbus_root_path/adapter/common/include",
     "$dsoftbus_root_path/core/common/include",
     "$dsoftbus_root_path/interfaces/kits/bus_center",
     "$dsoftbus_root_path/interfaces/kits/common",
+    "$dsoftbus_root_path/tests/sdk/common/include",
     "//commonlibrary/c_utils/base/include",
-    "$dsoftbus_root_path/adapter/common/include",
-    "$dsoftbus_root_path/sdk/bus_center/service/include",
-    "$dsoftbus_root_path/sdk/bus_center/manager/include",
   ]
   cflags = [
     "-g",
@@ -38,7 +37,10 @@ ohos_fuzztest("SetNodeDataChangeFlagFuzzTest") {
   ]
   sources = [ "setnodedatachangeflag_fuzzer.cpp" ]
 
-  deps = [ "$dsoftbus_root_path/sdk:softbus_client" ]
+  deps = [
+    "$dsoftbus_root_path/sdk:softbus_client",
+    "$dsoftbus_root_path/tests/sdk/common:softbus_access_token_test",
+  ]
 
   external_deps = [
     "c_utils:utils",
