fix UT mock unavaiable, because depended libsoftbus_server.so Signed-off-by: samuel.shi <shixintao1@huawei.com>
Change-Id: Ic4e543dd70d2c7e10d51b394575979972be3920c

--- a/tests/core/transmission/trans_channel/proxy_channel/BUILD.gn
+++ b/tests/core/transmission/trans_channel/proxy_channel/BUILD.gn
@@ -90,9 +90,18 @@ ohos_unittest("TransProxyChannelCoreTest") {
   }
 }
 
+import(
+    "//foundation/communication/dsoftbus/core/transmission/trans_channel/common/common.gni")
+import(
+    "//foundation/communication/dsoftbus/core/transmission/trans_channel/proxy/proxy.gni")
+
 ohos_unittest("TransProxyChannelCoreMockTest") {
   module_out_path = module_output_path
   sources = trans_comm_mock_src
+
+  sources += trans_proxy_channel_src
+  sources += trans_channel_common_src
+
   sources += [
     "trans_proxy_manager_test.cpp",
     "trans_proxy_message_test.cpp",
@@ -142,9 +151,11 @@ ohos_unittest("TransProxyChannelCoreMockTest") {
     "unittest/common/",
   ]
 
+  include_dirs +=
+      [ "$dsoftbus_root_path/core/bus_center/lnn/net_buscenter/include" ]
+
   deps = [
     "$dsoftbus_root_path/core/common:softbus_utils",
-    "$dsoftbus_root_path/core/frame:softbus_server",
     "//third_party/googletest:gmock",
     "//third_party/googletest:gtest_main",
   ]
