--- a/components/nstackx/nstackx_core/dfile/BUILD.gn
+++ b/components/nstackx/nstackx_core/dfile/BUILD.gn
@@ -36,6 +36,7 @@ if (defined(ohos_lite)) {
       "-fno-lto",
       "-DNSTACKX_WITH_HMOS_LINUX",
       "-DMBEDTLS_INCLUDED",
+      "-DENABLE_USER_LOG",
     ]
     cflags_cc = cflags
   }
@@ -60,6 +61,7 @@ if (defined(ohos_lite)) {
         "core/nstackx_dfile_control.c",
         "core/nstackx_dfile_dfx.c",
         "core/nstackx_dfile_frame.c",
+        "core/nstackx_dfile_log.c",
         "core/nstackx_dfile_mp.c",
         "core/nstackx_dfile_retransmission.c",
         "core/nstackx_dfile_send.c",
@@ -94,6 +96,7 @@ if (defined(ohos_lite)) {
         "core/nstackx_dfile_control.c",
         "core/nstackx_dfile_dfx.c",
         "core/nstackx_dfile_frame.c",
+        "core/nstackx_dfile_log.c",
         "core/nstackx_dfile_mp.c",
         "core/nstackx_dfile_retransmission.c",
         "core/nstackx_dfile_send.c",
@@ -119,6 +122,7 @@ if (defined(ohos_lite)) {
       "-DMBEDTLS_INCLUDED",
       "-DNSTACKX_WITH_HMOS_LINUX",
       "-DDFILE_ENABLE_HIDUMP",
+      "-DENABLE_USER_LOG",
     ]
     cflags_cc = cflags
     include_dirs = [
@@ -140,6 +144,7 @@ if (defined(ohos_lite)) {
       "core/nstackx_dfile_control.c",
       "core/nstackx_dfile_dfx.c",
       "core/nstackx_dfile_frame.c",
+      "core/nstackx_dfile_log.c",
       "core/nstackx_dfile_mp.c",
       "core/nstackx_dfile_retransmission.c",
       "core/nstackx_dfile_send.c",
