传输覆盖率UT用例
Signed-off-by: zhangzaiyao <zhangzaiyao@huawei.com>

--- a/tests/core/transmission/trans_channel/udp_negotiation/BUILD.gn
+++ b/tests/core/transmission/trans_channel/udp_negotiation/BUILD.gn
@@ -64,11 +64,15 @@ ohos_unittest("TransUdpNegoTest") {
     "$dsoftbus_root_path/core/connection/p2p/interface",
     "$dsoftbus_root_path/core/connection/p2p/common/include",
     "$dsoftbus_root_path/core/transmission/trans_channel/common/include",
+    "$dsoftbus_root_path/tests/sdk/common/include",
+    "$dsoftbus_root_path/core/frame/common/include",
+    "$dsoftbus_root_path/core/transmission/trans_channel/manager/src",
   ]
 
   deps = [
     "$dsoftbus_root_path/core/common:softbus_utils",
     "$dsoftbus_root_path/core/frame:softbus_server",
+    "$dsoftbus_root_path/tests/sdk/common:softbus_access_token_test",
     "//third_party/googletest:gtest_main",
   ]
 
