新增coap发现UT用例
Signed-off-by: wangruifeng14 <wangruifeng14@huawei.com>

--- a/tests/core/discovery/BUILD.gn
+++ b/tests/core/discovery/BUILD.gn
@@ -34,7 +34,9 @@ group("unittest") {
     ]
   }
   if (dsoftbus_feature_disc_coap) {
-    deps += [ "coap/unittest:unittest" ]
+    deps += [
+      "coap/unittest:unittest",
+    ]
   }
   if (has_enhance_test) {
     deps +=
