--- a/tests/sdk/transmission/trans_channel/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/BUILD.gn
@@ -195,6 +195,7 @@ if (defined(ohos_lite)) {
           deps += [
             ":TransSdkUdpStreamAdaptorTest",
             ":TransSdkUdpStreamInterfaceTest",
+            "udp/stream/libsoftbus_stream:unittest",
           ]
         }
       }
