--- a/tests/sdk/transmission/trans_channel/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/BUILD.gn
@@ -157,6 +157,7 @@ if (defined(ohos_lite)) {
       ":TransSdkTest",
       "monitor_permission_test:MonitorPermission",
       "permission:DynamicPermissionTest",
+      "udp/stream/libsoftbus_stream:unittest",
     ]
   }
 }
