--- a/tests/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/BUILD.gn
@@ -15,12 +15,22 @@ import("//build/test.gni")
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 group("unittest") {
-  testonly = true
-
-  deps = [
-    "raw_stream_data_test:unittest",
-    "stream_common_data_test:unittest",
-    "vtp_instance_test:unittest",
-    "vtp_stream_socket_test:unittest",
-  ]
+  if (dsoftbus_feature_trans_udp == true) {
+    if (dsoftbus_feature_trans_udp_stream == true) {
+      if (!defined(ohos_lite)) {
+        testonly = true
+        deps = []
+        deps += [
+          # deps file
+          "raw_stream_data_test:unittest",
+          "stream_common_data_test:unittest",
+          "vtp_instance_test:unittest",
+          "vtp_stream_socket_test:unittest",
+        ]
+      }
+    }
+  } else {
+    testonly = true
+    deps = []
+  }
 }
