--- a/tests/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/raw_stream_data_test/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/raw_stream_data_test/BUILD.gn
@@ -39,6 +39,9 @@ ohos_unittest("RawStreamDataTest") {
     "$dsoftbus_root_path/core/common:softbus_utils",
     "$dsoftbus_root_path/core/frame:softbus_server",
     "$dsoftbus_root_path/sdk:softbus_client",
+    "$dsoftbus_root_path/tests/sdk/common:softbus_access_token_test",
+    "//third_party/bounds_checking_function:libsec_shared",
+    "//third_party/googletest:gtest",
     "//third_party/googletest:gtest_main",
   ]
 
